slaughter2 (2.0-1) stable; urgency=low

  * Updated to use a new system for fetching files/policies, using
    pluggable transports.  Available transports include:
    - local
    - http
    - hg
    - git
    - rsync
    - svn
  * Renamed the client package to slaughter2 to avoid breakage on upgrade,
    but also update the configuration file post-install, to mitigate against
    this.
  * Updated to ensure that polices are unreadable to non-root users.
  * Updated correctness of several primitives.
  * Updated documentation: 100% POD coverage.
  * Added test-suite.

 -- Steve Kemp <steve@steve.org.uk>  Sun, 28 Oct 2012 23:33:43 +0000

slaughter (1.7-1) stable; urgency=low

  * BUGFIX Release:
    - SHA1 sum comparisons succeed as expected.

 -- Steve Kemp <steve@steve.org.uk>  Tue, 09 Oct 2012 18:27:18 +0000

slaughter (1.6-1) stable; urgency=low

  * New release containing integrated test suite.
  * New primitive SetPermissions.
  * Bugfixes.
  * SSL validation of https:// based fetches & slaughter-specific user-agent.

 -- Steve Kemp <steve@steve.org.uk>  Tue, 09 Oct 2012 08:30:08 +0000

slaughter (1.5-1) stable; urgency=low

  * Abstract away the meta-information collection into a series of modules.
  * Renamed the Linux package-helping library.
  * Updated to use more obvious logfile names.
  * Added support for Microsoft Windows clients, via Strawberry Perl.
  * Allow template expansion in policy filenames.
  * Included manpage for "slaughter".
  * New command line flag: --version

 -- Steve Kemp <steve@steve.org.uk>  Sat, 26 Nov 2011 14:44:41 +0000

slaughter (1.4-1) stable; urgency=low

  * Updated to fetch $URL.$ARCH for each file fetch operation,
    and log the failures of URL fetches generally.
  * Updated documentation, available via "slaughter --manu".
  * Updated standards version.

 -- Steve Kemp <steve@steve.org.uk>  Tue, 1 Nov 2011 20:40:02 +0000

slaughter (1.3-1) stable; urgency=low
